my first commit

--- a/README
+++ b/README
@@ -1,5 +1,10 @@
-
+Lead developer Kathryn Matthews
 
 # Project Muriel #
+
+git add README
+git add README
+git commit -m "my first commit"
+git push
 
 
