--- a/README
+++ b/README
@@ -1,10 +1,8 @@
-Lead developer Kathryn Matthews
 
 # Project Muriel #
 
-git add README
-git add README
-git commit -m "my first commit"
-git push
+Lead developer Kathryn Matthews
+Assisted bt Warren Matthews
+
 
 
